# adapta-zapresolve

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  memory_checker.py  pyproject.toml  redis.conf
wpp/: buffer.py  memory.py
wpp/api/: wpp_message.py  wpp_webhook.py
wpp/genai/prompts/: step1.py  step2.py
wpp/genai/workflows/: step1.py
wpp/schemas/: wpp_message.py  wpp_webhook.py
