[project]
name = "adapta-zapresolve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "ngrok==1.4.0",
    "pdf2image>=1.17.0",
    "redis>=6.2.0",
    "repenseai>=4.0.14",
    "uvicorn>=0.35.0",
]
